--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  align-items: center;
+
 }
 
 a {
@@ -23,8 +26,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -53,6 +57,9 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+button:active{
+  background-color: #640357;
 }
 
 @media (prefers-color-scheme: light) {
